Project

General

Profile

Actions

Bug #38699

closed

rgw:ldap: fix early return in LDAPAuthEngine::init w/uri not empty()

Added by Matt Benjamin about 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus,mimic,luminous
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Prevents authentication from...working.


Related issues 3 (0 open3 closed)

Copied to rgw - Backport #38754: nautilus: rgw:ldap: fix early return in LDAPAuthEngine::init w/uri not empty()ResolvedNathan CutlerActions
Copied to rgw - Backport #38755: luminous: rgw:ldap: fix early return in LDAPAuthEngine::init w/uri not empty()ResolvedPrashant DActions
Copied to rgw - Backport #38756: mimic: rgw:ldap: fix early return in LDAPAuthEngine::init w/uri not empty()ResolvedPrashant DActions
Actions #1

Updated by Matt Benjamin about 5 years ago

  • Backport set to [nautilus],mimic,luminous
Actions #2

Updated by Matt Benjamin about 5 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Casey Bodley about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport changed from [nautilus],mimic,luminous to nautilus,mimic,luminous
Actions #4

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38754: nautilus: rgw:ldap: fix early return in LDAPAuthEngine::init w/uri not empty() added
Actions #5

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38755: luminous: rgw:ldap: fix early return in LDAPAuthEngine::init w/uri not empty() added
Actions #6

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38756: mimic: rgw:ldap: fix early return in LDAPAuthEngine::init w/uri not empty() added
Actions #7

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF