rgw: ldap: fix LDAPAuthEngine::init() when uri !empty()

Fixes: https://tracker.ceph.com/issues/38699

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>